--- a/frontend/src/styles/tailwind.css
+++ b/frontend/src/styles/tailwind.css
@@ -612,6 +612,34 @@ video {
   }
 }
 
+@font-face {
+  font-family: 'Noto Sans Thai';
+  src: url('/fonts/Noto_Sans_Thai/NotoSansThai-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Poppins';
+  src: url('/fonts/Poppins/Poppins-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Alike';
+  src: url('/fonts/Alike/Alike-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Concert One';
+  src: url('/fonts/Concert_One/ConcertOne-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 html {
   -webkit-tap-highlight-color: transparent;
 }
